--- a/RethinkDB.Demo.Server/Web.config
+++ b/RethinkDB.Demo.Server/Web.config
@@ -57,5 +57,13 @@
     <assemblyIdentity name="Owin" publicKeyToken="f0ebd12fd5e55cc5" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
   </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="Microsoft.AspNet.SignalR.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-2.2.0.0" newVersion="2.2.0.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+  </dependentAssembly>
 </assemblyBinding></runtime>  
 </configuration>
