Material UI + React + FunScript

--- a/RethinkDB.Demo.Client/RethinkDB.Demo.Client.fsproj
+++ b/RethinkDB.Demo.Client/RethinkDB.Demo.Client.fsproj
@@ -199,6 +199,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Helpers.fs" />
+    <Compile Include="MaterialUIBindings.fs" />
     <Compile Include="Message.fs" />
     <Compile Include="MessageList.fs" />
     <Compile Include="MessageForm.fs" />
