--- a/RethinkDB.Demo.Server/Web.config
+++ b/RethinkDB.Demo.Server/Web.config
@@ -4,6 +4,21 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+    <configSections>
+        <section name="rethinkdb" type="RethinkDb.Configuration.RethinkDbClientSection, RethinkDb"/>
+    </configSections>
+    <rethinkdb>
+        <clusters>
+            <cluster name="example">
+                <defaultLogger enabled="true" category="Warning"/>
+                <connectionPool enabled="true"/>
+                <networkErrorHandling enabled="true" />
+                <endpoints>
+                    <endpoint address="192.168.59.103" port="28015"/>
+                </endpoints>
+            </cluster>
+        </clusters>
+    </rethinkdb>
   <appSettings>
   </appSettings>
   <system.web>
@@ -37,6 +52,10 @@
     <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
   </dependentAssembly>
+    <dependentAssembly>
+      <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+      <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+    </dependentAssembly>
   <dependentAssembly>
     <assemblyIdentity name="System.Web.Http.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
@@ -49,10 +68,10 @@
     <assemblyIdentity name="Microsoft.Owin.Host.SystemWeb" publicKeyToken="31bf3856ad364e35" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
   </dependentAssembly>
-  <!-- <dependentAssembly>
+   <dependentAssembly>
     <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-6.0.8.0" newVersion="6.0.8.18111" />
-  </dependentAssembly> -->
+    <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="6.0.0.0" />
+  </dependentAssembly> 
   <dependentAssembly>
     <assemblyIdentity name="Owin" publicKeyToken="f0ebd12fd5e55cc5" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
@@ -65,6 +84,16 @@
     <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
   </dependentAssembly>
-</assemblyBinding>
+    <dependentAssembly>
+      <assemblyIdentity name="Microsoft.Owin.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+      <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+    </dependentAssembly>
+    <dependentAssembly>
+      <assemblyIdentity name="protobuf-net" publicKeyToken="257b51d87d2e4d67" culture="neutral" />
+      <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="2.0.0.668" />
+    </dependentAssembly>
+
+    
+  </assemblyBinding>
 </runtime>
 </configuration>
