RethinkDB push notifications

--- a/RethinkDB.Demo.Server/RethinkDB.Demo.Server.fsproj
+++ b/RethinkDB.Demo.Server/RethinkDB.Demo.Server.fsproj
@@ -24,7 +24,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <OutputPath>bin</OutputPath>
+    <OutputPath>..\build\_PublishedWebsites\RethinkDB.Demo.Server\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <PlatformTarget>
